crates/toml_edit/tests/snapshots/invalid/array/no-close-table-02.stderr
TOML parse error at line 1, column 16
  |
1 | x = [{ key = 42 #
  |                ^
unclosed inline table, expected `}`
